flares update
